fix:l Autoformat whitespace

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -1,8 +1,8 @@
 /* Customized Colors */
 :root {
-  --md-primary-fg-color:        #4F22D7; /* consider 510 navy #00214D */
-  --md-primary-fg-color--light: #CFBFFF;
-  --md-primary-fg-color--dark:  #361A8C;
+  --md-primary-fg-color: #4f22d7; /* consider 510 navy #00214D */
+  --md-primary-fg-color--light: #cfbfff;
+  --md-primary-fg-color--dark: #361a8c;
 }
 
 /**
@@ -23,7 +23,6 @@
   font-weight: bold;
 }
 
-
 /* Make screenshots (only inside pages) stand-out more */
 article img {
   border-radius: 0.375rem;
@@ -41,13 +40,13 @@ article img {
 /* Select the first column of all tables */
 table td:first-child,
 table th:first-child {
-    /* Set a fixed width for the first column */
-    width: 20%; /* You can adjust the width as needed */
-    /* Optionally add more styling if needed */
+  /* Set a fixed width for the first column */
+  width: 20%; /* You can adjust the width as needed */
+  /* Optionally add more styling if needed */
 }
 
 /* Ensure table layout respects the specified widths */
 table {
-    table-layout: fixed;
-    width: 100%;
+  table-layout: fixed;
+  width: 100%;
 }
